travis: Expand command for readability

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,10 @@ ghc:
   - 7.4
 
 install:
-  - git clone https://github.com/BNFC/bnfc --depth 1 bnfc && cd bnfc/source && sudo cabal install && cd ../..
+  - git clone https://github.com/BNFC/bnfc --depth 1 bnfc
+  - cd bnfc/source
+  - sudo cabal install
+  - cd ../..
 
 script:
   - sh run_tests.sh
