--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,14 @@ install:
   - git clone https://github.com/BNFC/bnfc --depth 1 bnfc
   - cd bnfc/source
   - sudo cabal install
-  - apt-get install build-essential haskell-platform llvm
-  - cabal update
+  - sudo apt-get install build-essential haskell-platform llvm
+  - sudo cabal update
   - sudo apt-get install libghc-mtl-dev
   - sudo apt-get install libghc-mtl-doc
   - sudo apt-get install libghc-mtl-prof
+  - ghc-pkg list mtl
+  - sudo cabal install cabal-install
+  - sudo cabal install mtl
   - ghc-pkg list mtl
   - cd ../..
   - sudo apt-get install python3
